<resources>
    <string name="app_name">Menino ou Menina</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="TituloPrincipal">Menino ou Menina?</string>
    <string name="SobreTitulo">SOBRE</string>
    <string name="Voltar">Voltar</string>
    <string name="SiteDesenvolvedor">www.adrianoantonucci.com.br</string>
    <string name="TelefoneDesenvolvedor">(44) 99940-1701</string>
    <string name="EmailDesenvolvedor">adriano@adrianoantonucci.com.br</string>
    <string name="id_ADMOB">ca-app-pub-3667658031886050/9827417320</string>
    <string name="id_Aplicativo">ca-app-pub-3667658031886050~8350684122</string>
    <string name="textoSobre">Este app é apenas uma brincadeira, não garantimos que os resultados
    aqui apresentados sejam verdadeiros.</string>

    <string-array name="cb_idade">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
    </string-array>
    <string-array name="cb_mes">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>
