<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Fundo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblTitulo"
            style="@style/Toolbar"
            android:text="@string/SobreTitulo" />

        <Button android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Voltar"
            android:layout_alignParentLeft="@+id/lblTitulo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_below="@+id/lblTitulo">

            <TableRow
                android:id="@+id/tableRow1"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:id="@+id/imgLogo"
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:src="@drawable/logo" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/lblTexto"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoSobre"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnEmailDesenvolvedor"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EmailDesenvolvedor" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnSiteDesenvolvedor"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SiteDesenvolvedor" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/btnFoneDesenvolvedor"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TelefoneDesenvolvedor" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>